[gd_scene load_steps=9 format=3 uid="uid://u4hmkvmn1nt"]

[ext_resource type="Script" uid="uid://b6a7juslaw2c0" path="res://scenes/tiles/breakable_wall.gd" id="1_ih7p8"]
[ext_resource type="Texture2D" uid="uid://b4bqxtpr0oe8l" path="res://assets/export/tiles/deafult_wall_@0.5x.png" id="3_1aulc"]
[ext_resource type="AudioStream" uid="uid://dptc8rddhfkwn" path="res://assets/sfx/sfx_punch1_normalized.ogg" id="4_2flqd"]
[ext_resource type="PackedScene" uid="uid://bvgyu4uqoahr" path="res://game_kit/scenes/damage_number/damage_number.tscn" id="4_3g1x4"]

[sub_resource type="Shader" id="Shader_1aulc"]
code = "shader_type canvas_item;

uniform bool active = false;
uniform vec3 color: source_color = vec3(1.0, 1.0, 1.0);

void fragment() {
    if (active) {
		 COLOR = vec4(color.x, color.y, color.z, texture(TEXTURE, UV).a);
    } else {
        COLOR = texture(TEXTURE, UV);
    }
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3g1x4"]
resource_local_to_scene = true
shader = SubResource("Shader_1aulc")
shader_parameter/active = false
shader_parameter/color = Color(1, 1, 1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rwdcc"]
size = Vector2(128, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3g1x4"]
resource_local_to_scene = true
size = Vector2(128, 128)

[node name="BreakableWall" type="StaticBody2D"]
script = ExtResource("1_ih7p8")
max_health = 50

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
modulate = Color(1, 0.156863, 0.152941, 1)
material = SubResource("ShaderMaterial_3g1x4")
texture = ExtResource("3_1aulc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
shape = SubResource("RectangleShape2D_rwdcc")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 0
monitoring = false

[node name="HurtboxCollider" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_3g1x4")
debug_color = Color(0.235294, 0.521569, 0.345098, 0.407843)

[node name="DamageNumber" parent="." instance=ExtResource("4_3g1x4")]
unique_name_in_owner = true
position = Vector2(64, -64)

[node name="HitSfx" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_2flqd")
